# Simple_RealSense_facial_recognition_system

./: .gitignore  README.md  build_realsense_in_ubuntu_2004.sh  start.sh
data/face_database/: database.json
docs/: DIRECTORY_STRUCTURE.md  FACE_RECOGNITION_README.md  MICROSOFT_TTS.md  QUICK_START.md  QUICK_START_FACE_RECOGNITION.md  QUICK_START_VOICE.md  README.md  REALSENSE_STREAMS.md  VOICE_ANNOUNCEMENT.md  camera.md  learn.md  启动说明.md
scripts/: build_realsense_in_ubuntu_2004.sh  check_device.sh  diagnose_voice.sh
src/realsense_camera/: CMakeLists.txt  FACE_DETECTION_README.md  README.md  package.xml
src/realsense_camera/launch/: realsense_camera.launch
src/realsense_camera/scripts/: add_person.py  face_recognition_manager.py  realsense_camera_node.py
tests/: test_face_detection.py  test_microsoft_tts.py  test_node.py  test_recognition.py  test_voice_announcement.py  view_depth_image.py
