<?xml version="1.0"?>
<package format="2">
  <name>realsense_camera</name>
  <version>1.0.0</version>
  <description>ROS1 Noetic package for Intel RealSense camera</description>

  <maintainer email="user@example.com">User</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  <depend>message_filters</depend>

  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-opencv</exec_depend>

  <export>
  </export>
</package>
